--- a/project1/webapp/view/BranchData.view.xml
+++ b/project1/webapp/view/BranchData.view.xml
@@ -1,170 +1,100 @@
-<mvc:View
-    controllerName="sap.ui.com.project1.controller.BranchData"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m"
-    xmlns:core="sap.ui.core"
-    xmlns:fb="sap.ui.comp.filterbar"
+<mvc:View controllerName="sap.ui.com.project1.controller.BranchData"
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns="sap.m"
+	xmlns:core="sap.ui.core"
+	xmlns:fb="sap.ui.comp.filterbar"
     displayBlock="true"
-    busyIndicatorDelay="0"
->
-    <Page showHeader="true">
-        <headerContent>
-            <core:Fragment
-                fragmentName="sap.ui.com.project1.fragment.Header"
-                type="XML"
-            />
-        </headerContent>
-        <content>
-            <fb:FilterBar
-                id="MD_id_Filterbar"
-                persistencyKey="myPersKey"
-                useToolbar="false"
-                clear="MD_onPressClear"
-                showClearOnFB="true"
-                search="MD_onSearch"
-                showFilterConfiguration="false"
-                filterContainerWidth="auto"
-            >
-                <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Branch Code"
-                        label="Branch Code"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-                        <fb:control>
-                            <ComboBox
-                                id="MD_id_BranchCode"
-                                items="{mainModel>/}"
-                                showSecondaryValues="true"
-                                showClearIcon="true"
-                                width="100%"
-                            >
-                                <core:ListItem
-                                    key="{mainModel>BranchID}"
-                                    text="{mainModel>BranchID}"
-                                    additionalText="{mainModel>Name}"
-                                />
-                            </ComboBox>
-                        </fb:control>
-                    </fb:FilterGroupItem>
-                </fb:filterGroupItems>
-                <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Pincode"
-                        label="Pin Code"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-					<fb:control>
-                        <SearchField
-                            width="250px"
-                            liveChange="onGlobalSearch"
-                            placeholder="Search"
-                        />
+    busyIndicatorDelay="0">
+	<Page showHeader="true">
+		<headerContent>
+			<core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
+		</headerContent>
+		<content>
+			<fb:FilterBar id="MD_id_Filterbar" persistencyKey="myPersKey" useToolbar="false" clear="MD_onPressClear"
+                showClearOnFB="true" search="MD_onSearch" showFilterConfiguration="false" filterContainerWidth="auto">
+				<fb:filterGroupItems>
+					<fb:FilterGroupItem name="Name" label="Branch Code" groupName="Group" visibleInFilterBar="true">
+						<fb:control>
+							<ComboBox id="MD_id_BranchCode" items="{mainModel>/}" showSecondaryValues="true"
+                                showClearIcon="true" width="100%">
+								<core:ListItem key="{mainModel>BranchID}" text="{mainModel>BranchID}"
+                                    additionalText="{mainModel>Name}"/>
+							</ComboBox>
 						</fb:control>
-                    </fb:FilterGroupItem>
-                </fb:filterGroupItems>
-            </fb:FilterBar>
-            <Table
-                id="id_MD_Table"
-                mode="MultiSelect"
-                sticky="ColumnHeaders,HeaderToolbar"
-                growing="true"
+					</fb:FilterGroupItem>
+				</fb:filterGroupItems>
+				<fb:filterGroupItems>
+					<fb:FilterGroupItem name="Pincode" label="Pin Code" groupName="Group" visibleInFilterBar="true">
+						<fb:control>
+							<SearchField id="MD_id_SearchField" width="250px" liveChange="onGlobalSearch"
+                            placeholder="Search"/>
+						</fb:control>
+					</fb:FilterGroupItem>
+				</fb:filterGroupItems>
+			</fb:FilterBar>
+			<Table id="id_MD_Table" mode="MultiSelect"
+                sticky="ColumnHeaders,HeaderToolbar" growing="true"
                 busyIndicatorDelay="0"
                 growingThreshold="100"
                 alternateRowColors="true"
                 selectionChange="MC_onTableSelectionChange"
                 items="{mainModel>/}"
-            >
-                <headerToolbar>
-                    <OverflowToolbar>
-                        <Title
-                            text="Branch Details ({= ${mainModel>/}.length})"
-                        />
-                        <ToolbarSpacer />
-                        <Button
-                            text="Add"
-                            press="MD_AddButtonPress"
-                            class="myUnifiedBtn"
-                        />
-                        <Button
-                            text="Edit"
-                            press="MD_UpdateTableRow"
-                            class="myUnifiedBtn"
-                        />
-                        <Button
-                            text="Delete"
-                            press="MD_DeleteRow"
-                            class="myUnifiedBtn"
-                        />
-                        <Button
-                            text="Download"
-                            press="MD_onDownload"
-                            class="myUnifiedBtn"
-                        />
-                    </OverflowToolbar>
-                </headerToolbar>
-                <columns>
-                    <Column demandPopin="true">
-                        <Text text="Branch Code" />
-                    </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
-                        <Text text="Branch Name" />
-                    </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
-                        <Text text="Address" />
-                    </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
-                        <Text text="Pin Code" />
-                    </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
-                        <Text text="Contact Number" />
-                    </Column>
-                    <Column demandPopin="true">
-                        <Text text="Country" />
-                    </Column>
-                    <Column demandPopin="true">
-                        <Text text="State" />
-                    </Column>
-                    <Column demandPopin="true">
-                        <Text text="City" />
-                    </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
-                        <Text text="Penalty" />
-                    </Column>
-                </columns>
-                <items>
-                    <ColumnListItem>
-                        <cells>
-                            <Text text="{mainModel>BranchID}" />
-                            <Text text="{mainModel>Name}" />
-                            <Text text="{mainModel>Address}" />
-                            <Text text="{mainModel>Pincode}" />
-                            <Text text="{mainModel>STD} {mainModel>Contact}" />
-                            <Text text="{mainModel>Country}" />
-                            <Text text="{mainModel>State}" />
-                            <Text text="{mainModel>City}" />
-                            <Text text="{mainModel>Penalty}" />
-                        </cells>
-                    </ColumnListItem>
-                </items>
-            </Table>
-        </content>
-    </Page>
+                updateFinished="onTableUpdateFinished">
+				<headerToolbar>
+					<OverflowToolbar>
+						<Title text="Branch Details ({mainModel>/count})" />
+						<ToolbarSpacer />
+						<Button text="Add" press="MD_AddButtonPress" class="myUnifiedBtn"/>
+						<Button text="Edit" press="MD_UpdateTableRow" class="myUnifiedBtn"/>
+						<Button text="Delete" press="MD_DeleteRow" class="myUnifiedBtn"/>
+						<Button text="Download" press="MD_onDownload" class="myUnifiedBtn"/>
+					</OverflowToolbar>
+				</headerToolbar>
+				<columns>
+					<Column demandPopin="true">
+						<Text text="Branch Code" />
+					</Column>
+					<Column demandPopin="true" minScreenWidth="Tablet">
+						<Text text="Branch Name" />
+					</Column>
+					<Column demandPopin="true" minScreenWidth="Tablet">
+						<Text text="Address" />
+					</Column>
+					<Column demandPopin="true" minScreenWidth="Tablet">
+						<Text text="Pin Code" />
+					</Column>
+					<Column demandPopin="true" minScreenWidth="Tablet">
+						<Text text="Contact Number" />
+					</Column>
+					<Column demandPopin="true">
+						<Text text="Country" />
+					</Column>
+					<Column demandPopin="true">
+						<Text text="State" />
+					</Column>
+					<Column demandPopin="true">
+						<Text text="City" />
+					</Column>
+					<Column demandPopin="true" minScreenWidth="Tablet">
+						<Text text="Penalty" />
+					</Column>
+				</columns>
+				<items>
+					<ColumnListItem>
+						<cells>
+							<Text text="{mainModel>BranchID}"/>
+							<Text text="{mainModel>Name}"/>
+							<Text text="{mainModel>Address}"/>
+							<Text text="{mainModel>Pincode}"/>
+							<Text text="{mainModel>STD} {mainModel>Contact}"/>
+							<Text text="{mainModel>Country}"/>
+							<Text text="{mainModel>State}"/>
+							<Text text="{mainModel>City}"/>
+							<Text text="{mainModel>Penalty}"/>
+						</cells>
+					</ColumnListItem>
+				</items>
+			</Table>
+		</content>
+	</Page>
 </mvc:View>
