--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -2023,3 +2023,40 @@ span.sapMBtnInner.sapMBtnEmphasized {
     font-weight: bold !important;
     background: white !important;
 }
+/* Custom button for hostel booking theme */
+/* Normal state */
+.btnViewDetails.sapMLnk {
+    background: linear-gradient(135deg, #02e0fd, #008b96) !important;
+    color: #f8f9f9 !important;
+    font-weight: bold;
+    padding: 8px 20px;
+    border-radius: 25px !important;
+    box-shadow: inset 0 0 8px rgba(255,255,255,0.5),
+                0 4px 10px rgba(0,0,0,0.2);
+    text-decoration: none !important;
+    display: inline-block;
+}
+
+/* Hover state */
+.btnViewDetails.sapMLnk:hover {
+    text-decoration: none !important;
+    transform: scale(1.05);
+    box-shadow: inset 0 0 12px rgba(255,255,255,0.6);
+}
+
+
+.btnViewDetails.sapMLnk:active {
+    border-radius: 25px !important;
+    background: linear-gradient(135deg, #02d0ed, #007f89) !important;
+    text-decoration: none !important;
+}
+
+
+.btnViewDetails.sapMLnk:focus {
+    border-radius: 25px !important;
+    outline: none;
+    text-decoration: none !important;
+}
+
+
+
