--- a/project1/webapp/view/AdminDetails.view.xml
+++ b/project1/webapp/view/AdminDetails.view.xml
@@ -661,7 +661,7 @@
 									
 
                                         <Button
-                                    text="Upload Images"
+                                    text="Upload Documents"
                                     press="onUploadDocumentFile"
                                     class="myUnifiedBtn"
                                     visible="{VisibleModel>/visible}"
