Checkin payment changes

--- a/project1/webapp/view/Book_RoomSummary.view.xml
+++ b/project1/webapp/view/Book_RoomSummary.view.xml
@@ -99,7 +99,7 @@
       showValueHelp="true"
     valueHelpIconSrc="sap-icon://decline"
     valueHelpRequest="oncancelCoupon"
-    liveChange="onCouponLiveChange"
+    change="onCouponLiveChange"
     />
  
     <!-- Apply Now Button -->
